# advent-of-code-2024

./: .gitignore  README.md  advent-of-code.cabal  stack.yaml
src/: Day01.hs  Day02.hs  DayXX.hs
src/01/: README.md  main.hs
src/02/: README.md  main.hs
src/03/: README.md  main.hs
