cabal-version:       2.2

name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acomley/advent-of-code-2024
build-type:          Simple
extra-source-files:  README.md

executable day01
  hs-source-dirs:      src/01
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable day02
  hs-source-dirs:      src/02
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable day03
  hs-source-dirs:      src/03
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       regex-tdfa,
                       text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
